updated copyright; feedback button now points to github issues

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -65,7 +65,7 @@
     "edit_profile_data": "Edit profile",
     "edit_profile_data_sub": "Set your name, age, weight and height",
 
-    "report_bug": "Report bug",
+    "report_issue": "Feedback",
     "give_feedback": "Give feedback",
     "about": "About"
 }
