--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -65,7 +65,7 @@
     "edit_profile_data": "Редактировать профиль",
     "edit_profile_data_sub": "Set your name, age, weight and height",
 
-    "report_bug": "Сообщить об ошибке",
+    "report_issue": "Сообщить об ошибке",
     "give_feedback": "Обратная связь",
     "about": "О приложении"
 }
