moved openURL to a separate file

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -2,7 +2,7 @@
     "something_went_wrong": "Something went wrong",
 	"tap_select_date": "Tap here to select date",
 	
-	"kcal": "ккал",
+	"kcal": "kcal",
 	"grams": "grams",
 	"ml": "ml",
     "portion": "portion",
