--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -1,7 +1,13 @@
 {
+    "yes": "Да",
+    "no": "Нет",
+
+    "this_link_will_open": "Данная ссылка будет открыта: ",
+    "ask_to_continue": "Продолжить?",
+
     "something_went_wrong": "Что-то пошло не так",
 	"tap_select_date": "Нажмите здесь для выбора даты",
-	
+
 	"kcal": "ккал",
 	"grams": "грамм",
 	"ml": "мл",
@@ -54,7 +60,7 @@
 	"pick_category": "Выберите категорию",
 	"portions": "Порции",
 	"portions_hint": "Сколько порций вы съели?",
-	
+
     "statistics": "Статистика",
 
     "settings": "Настройки",
