--- a/i18n/en.json
+++ b/i18n/en.json
@@ -26,8 +26,8 @@
     "calories": "Calories",
     "calories_hint": "Energy value in kcal",
     "serving_size": "Portion size",
-    "unit": "Tap here to select category",
-    "select_category": "Tap here to select unit",
+    "unit": "Tap here to select unit",
+    "select_category": "Tap here to select category",
     "notes": "Notes",
     "notes_hint": "Some notes about this product",
     "carbohydrates": "Carbohydrates",
@@ -66,8 +66,8 @@
     "settings": "Settings",
     "language": "Language",
     "language_sub": "Select application language",
-    "edit_product_categories": "Edit product categories",
-    "edit_product_categories_sub": "Reorder, edit or add product categories",
+    "edit_meal_categories": "Edit journal categories",
+    "edit_meal_categories_sub": "Reorder, edit or add journal categories",
     "edit_profile_data": "Edit profile",
     "edit_profile_data_sub": "Set your name, age, weight and height",
 
